--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.350.0",
+    "@aws-sdk/lib-storage": "^3.350.0",
     "body-parser": "^1.20.2",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "formidable": "^2.1.1",
     "moment": "^2.29.4",
     "puppeteer": "^20.5.0"
   }
