--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@aws-sdk/client-s3": "^3.350.0",
     "@aws-sdk/lib-storage": "^3.350.0",
     "body-parser": "^1.20.2",
+    "dotenv": "^16.1.4",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "formidable": "^2.1.1",
